# EZGLKit

./: .gitignore  .travis.yml  EZGLKit.podspec  LICENSE
Classes/: CMakeLists.txt  EZGL.h  EZGLBase.h
Classes/assets/shaders/: frg_phong.glsl  frg_phong_es.glsl  frg_shadowmap_es.glsl  frg_video_disp.glsl  vtx_phong.glsl  vtx_phong_es.glsl  vtx_video_disp.glsl  water.glsl  water_es.glsl
Classes/assets/shaders/common/: cm_uniforms.glsl  defines.glsl  frg_base.glsl  frg_camera.glsl  frg_fog.glsl  frg_light.glsl  frg_normal.glsl  frg_projector.glsl  frg_shadow.glsl  frg_terrain.glsl  vtx_base.glsl  vtx_border_pass.glsl  vtx_clip_plane.glsl  vtx_cluster.glsl  vtx_simple_pass.glsl  vtx_with_cluster.glsl
Classes/component/: ELBoard.cpp  ELBoard.h  ELCollisionShape.cpp  ELCollisionShape.h  ELComponents.h  ELGeometry.cpp  ELGeometry.h  ELPartical.cpp  ELPartical.h  ELParticleSystem.cpp  ELParticleSystem.h  ELRigidBody.cpp  ELRigidBody.h  ELTerrain.cpp  ELTerrain.h  ELWaterPlane.cpp  ELWaterPlane.h
Classes/component/geometry/: EL2DPlane.cpp  EL2DPlane.h  ELCubeGeometry.cpp  ELCubeGeometry.h  ELMeshGeometry.cpp  ELMeshGeometry.h  ELPlaneGeometry.cpp  ELPlaneGeometry.h  ELSkySphere.cpp  ELSphereGeometry.cpp  ELSphereGeometry.h  ELVertexBufferGeometry.cpp  ELVertexBufferGeometry.h
Classes/component/renderpass/: ELShadowMapRenderPass.cpp  ELShadowMapRenderPass.h  ELWaterPlaneRenderPass.cpp  ELWaterPlaneRenderPass.h
Classes/components/: ELCollisionShape.cpp  ELCollisionShape.h  ELComponents.h  ELEffect.cpp  ELEffect.h  ELGeometry.cpp  ELGeometry.h  ELPartical.cpp  ELPartical.h  ELParticalSystem.h  ELParticleSystem.cpp  ELParticleSystem.h  ELRigidBody.cpp  ELRigidBody.h  ELTerrain.cpp  ELTerrain.h  ELWaterPlane.cpp  ELWaterPlane.h
Classes/components/geometry/: ELCubeGeometry.cpp  ELCubeGeometry.h  ELMeshGeometry.cpp  ELMeshGeometry.h  ELPlanGeometry.cpp  ELPlanGeometry.h  ELPlaneGeometry.cpp  ELPlaneGeometry.h  ELSkySphere.cpp  ELSkySphere.h  ELSphereGeometry.cpp  ELSphereGeometry.h  ELVertexBufferGeometry.cpp  ELVertexBufferGeometry.h
Classes/core/: ELCamera.cpp  ELCamera.h  ELComponent.cpp  ELComponent.h  ELConfig.cpp  ELConfig.h  ELCore.h  ELEffect.cpp  ELEffect.h  ELGameObject.cpp  ELGameObject.h  ELGeometry.cpp  ELGeometry.h  ELLight.cpp  ELLight.h  ELNode.cpp  ELNode.h  ELPhysicsWorld.cpp  ELPhysicsWorld.h  ELPrefab.cpp  ELPrefab.h  ELProgram.cpp  ELProgram.h  ELProjector.cpp  ELProjector.h  ELTexture.cpp  ELTexture.h  ELWaterPlane.cpp  ELWaterPlane.h  ELWorld.cpp  ELWorld.h
Classes/lua interface/: lua_ELNode.cpp  lua_ELNode.h  lua_ELWorld.cpp  lua_ELWorld.h  lua_Interfaces.h
Classes/prefab/: ELExplosion.cpp  ELExplosion.h  ELFire.cpp  ELFire.h  ELPrefabs.h  ELSnow.cpp  ELSnow.h
Classes/prefabs/: ELExplosion.cpp  ELFire.cpp  ELFire.h  ELPrefabs.h  ELSnow.cpp
Classes/types/: ELGeometryTypes.h  ELMatrix3.h  ELMatrix4.h  ELQuaternion.h  ELTransform.h  ELVector2.h  ELVector3.h  ELVector4.h  EZGLBasicTypes.h  EZGLMatrix4.h  EZGLMatrixTypes.h  EZGLQuaternion.h  EZGLTypes.h  EZGLVectorTypes.h
Classes/utils/: ELAssets.cpp  ELDAELoader.cpp  ELDAELoader.h  ELFBXLoader.cpp  ELFBXLoader.h  ELFBXVertexBufferProvider.cpp  ELFBXVertexBufferProvider.h  ELFbxUtil.cpp  ELFbxUtil.h  ELFileUtil.cpp  ELFileUtil.h  ELFrustumTest.cpp  ELFrustumTest.h  ELGLState.cpp  ELGLState.h  ELGeometryVertexBuffer.cpp  ELGeometryVertexBuffer.h  ELUtil.h  ELWaveFrontLoader.cpp  ELWaveFrontLoader.h
Projects/Clion/: CMakeLists.txt  main.cpp
Projects/Clion/BaseWindow/: main.cpp
Projects/Clion/FPS Demo2/: FGScene.cpp  FGScene.h  FGWindow.cpp
Projects/Clion/FPS Demo2/Textures/: water.glsl
Projects/Clion/FPS Game/: FGScene.cpp  FGScene.h  FGWindow.cpp
Projects/Clion/FPS Game/Textures/: water.glsl
Projects/Clion/Shader/: frag.glsl  main.cpp  monkey.mtl  shadow_frag.glsl  vertex.glsl
Projects/ClionProj/: CMakeLists.txt  FindFBX.cmake  main.cpp
Projects/ClionProj/FBX/: FGScene.cpp  FGScene.h  FGWindow.cpp  FGWindow.h  main.cpp
Projects/ClionProj/FBX/ArmyPilot/: cube.fbx  cube2.fbx
Projects/ClionProj/FPS Demo2/: FGScene.cpp  FGScene.h  FGWindow.cpp  FGWindow.h  main.cpp
Projects/ClionProj/FPS Game/: FGScene.cpp  FGScene.h  FGWindow.cpp
Projects/ClionProj/FPSGame/: ELBullet.cpp  ELBullet.h  FGScene.cpp  FGWindow.cpp  FGWindow.h  main.cpp
Projects/ClionProj/FPSGameWithLua/: FGScene.cpp  FGScene.h  FGWindow.cpp  main.cpp  scene1.lua
Projects/ClionProj/LuaTest/: main.cpp  test.lua
Projects/ClionProj/MemoryTest/: main.cpp
Projects/ClionProj/Shader/: frag.glsl  main.cpp  scene1.mtl  vertex.glsl
Projects/ClionProj/ShadowTest/: FGScene.cpp  FGScene.h  FGWindow.cpp  main.cpp
libs/bullet/: CMakeLists.txt
libs/bullet/BulletCollision/BroadphaseCollision/: btAxisSweep3.h  btDbvt.cpp  btDbvtBroadphase.cpp  btMultiSapBroadphase.cpp  btQuantizedBvh.cpp
libs/bullet/BulletCollision/CollisionDispatch/: btCollisionObject.h  btCollisionWorld.cpp  btCollisionWorld.h  btCollisionWorldImporter.cpp  btCompoundCollisionAlgorithm.cpp  btConvexConcaveCollisionAlgorithm.cpp  btSimulationIslandManager.cpp
libs/bullet/BulletCollision/CollisionShapes/: btBvhTriangleMeshShape.cpp  btCompoundShape.h  btConvexShape.cpp  btHeightfieldTerrainShape.h  btTriangleIndexVertexMaterialArray.h
libs/bullet/BulletCollision/Gimpact/: btGImpactBvh.cpp  btGImpactCollisionAlgorithm.cpp  btGImpactQuantizedBvh.cpp  gim_box_set.cpp  gim_box_set.h  gim_radixsort.h
libs/bullet/BulletCollision/NarrowPhaseCollision/: btContinuousConvexCollision.cpp  btGjkEpa2.cpp  btGjkEpa3.h  btSimplexSolverInterface.h  btVoronoiSimplexSolver.cpp
libs/bullet/BulletDynamics/ConstraintSolver/: btJacobianEntry.h  (+3 more)
libs/bullet/BulletSoftBody/: btDefaultSoftBodySolver.cpp  btSoftBody.h  btSoftBodyConcaveCollisionAlgorithm.cpp  btSoftBodyHelpers.cpp  btSoftBodyHelpers.h
libs/bullet/LinearMath/: btAlignedObjectArray.h  btIDebugDraw.h  btMatrix3x3.h  btQuickprof.cpp  btQuickprof.h  btScalar.h  btTransformUtil.h
libs/soil/: CMakeLists.txt  SOIL.cc  SOIL.h  image_helper.cc  image_helper.h  stb_image_aug.cc  stb_image_aug.h  stbi_DDS_aug_c.h
(+298 files in other folders)
